--- a/css/index.css
+++ b/css/index.css
@@ -444,22 +444,26 @@ a:hover {
     background-color: #b32424;
     border-radius: 50%;
 }
+
 .index_hide_nav_list_bg {
     position: fixed;
     width: 100%;
     height: 50px;
     top: 0;
-    background-color: red;
+    background-color: #fff;
     z-index: 99;
 }
+
 .index_hide_nav_list {
     position: relative;
 }
+
 .index_hide_nav_list img {
     position: absolute;
     top: 15px;
     left: 15px;
 }
+
 .index_hide_nav_list>a {
     position: relative;
     float: left;
@@ -471,20 +475,91 @@ a:hover {
     background-image: -o-linear-gradient(181deg, #b34747 1%, #cc5252 98%);
     background-image: linear-gradient(269deg, #b34747 1%, #cc5252 98%);
 }
-.index_nav_right_glass {
-    float: right;
-    width: 22px;
-    height: 22px;
-    margin-top: 10px;
-    background: url(../images/spriteA.png) -449px -45px no-repeat;
-}
+
+.index_nav_right_glass,
 .index_nav_right_cart {
     float: right;
+    width: 50px;
+    height: 50px;
+}
+
+.index_nav_right_glass>a {
+    display: block;
+    width: 22px;
+    height: 22px;
+    margin: 0;
+    margin-top: 15px;
+    background: url(../images/spriteA.png) -449px -45px no-repeat;
+}
+
+.index_nav_right_glass_more {
+    position: absolute;
+    right: -240px;
+    width: 300px;
+    opacity: 0;
+}
+
+.index_nav_right_glass_arrow {
+    float: left;
+    background: url(../images/spriteA.png) 0 -346px;
+    background-size: 475px;
+    width: 32px;
+    height: 50px;
+}
+
+#index_nav_right_glass_input {
+    width: 240px;
+    height: 50px;
+    border: none;
+    outline: none;
+    color: #ccc;
+    font-size: 12px;
+}
+
+.index_right_hide_nav {
+    position: absolute;
+    top: 50px;
+    width: 275px;
+    height: 80px;
+    background-color: #fff;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.15);
+    z-index: 9;
+}
+
+.index_right_hide_nav p {
+    padding-left: 10px;
+    height: 40px;
+    line-height: 40px;
+    color: #ccc;
+    font-size: 12px;
+}
+
+.index_right_hide_nav a {
+    float: left;
+    line-height: 25px;
+    padding: 3px 5px;
+    margin: 0 0 3px 10px;
+    color: #cc5252;
+    border-radius: 4px;
+    text-align: center;
+    font-size: 12px;
+    border: 1px solid #cc5252;
+}
+
+.index_right_hide_nav a:hover {
+    color: #fff;
+    background-color: #cc5252;
+}
+
+.index_nav_right_cart>a {
+    display: block;
     width: 24px;
     height: 24px;
-    margin-top: 10px;
+    margin: 0;
+    margin-top: 15px;
     background: url(../images/spriteA.png) -446px -256px no-repeat;
 }
+
 .bot {
     position: fixed;
     top: 222px;
