--- a/css/register.css
+++ b/css/register.css
@@ -134,12 +134,14 @@ input:-moz-placeholder {
     font-size: 12px;
     color: rgb(207, 201, 201);
 }
-.r-content-from1>button {
+.r-content-from-submit {
     width: 338px;
     height: 40px;
     color: #fff;
+    text-align: center;
     margin-top: 30px;
     font-size: 14px;
+    padding: 0!important;
     cursor: pointer;
     border: 1px solid #e8e8e8;
     background-color: #b32424;
