--- a/ydetails.css
+++ b/ydetails.css
@@ -29,7 +29,7 @@ button, input, select, textarea { font-size:100%; }
 table { border-collapse:collapse; border-spacing:0; } 
  body   {
     background: #fff !important;
-    font-family:  "微软雅黑",Helvetica,Tahoma,Arial,"Hiragino Sans GB","Hiragino Sans GB W3","Microsoft YaHei",STXihei,STHeiti,Heiti,SimSun,sans-serif;
+    font-family:  Helvetica,Tahoma,Arial,"Hiragino Sans GB","Hiragino Sans GB W3","Microsoft YaHei",STXihei,STHeiti,Heiti,SimSun,sans-serif;
  }
 a {
     text-decoration: none;
@@ -164,6 +164,9 @@ a {
     float: right;
     margin-right: 20px;
 }
+.yleftList .share:hover {
+    color: #b01330;
+}
 .yleftList .share-icon {
     width: 0;
     height: 0;
@@ -231,6 +234,14 @@ a {
 }
 .ymainbox1 {
     display: inline-block;
+}
+.ymainbox1 .position {
+    font-size: 12px;
+    color: #646464;
+    margin-top: 10px;
+}
+.ymainbox1 .position  a{
+    color: #999;
 }
 .yrightArea {
     width: 280px;
@@ -1388,6 +1399,85 @@ a {
 .right-panel .left-panel .btnn:hover .ypanel-box5 {
     display: block;
 }
-body {
-    height: 5000px;
+.contain-main span{
+    line-height: 30px;
+    letter-spacing: .5px;
+}
+/*手表咨询样式*/
+.watch-left {
+    width: 200px;
+    float: left;
+    height: 558px;
+    margin-top: 20px;
+}
+.watch-left-top {
+    background-color: #997239;
+    padding: 0 15px;
+    height: 34px;
+    line-height: 34px;
+    color: #fff;
+    font-size: 18px;
+}
+.watch-left .bottom {
+    border-left: 1px solid #ddd;
+    border-top: 1px solid #ddd;
+}
+.watch-left .bottom dl{
+    padding: 15px;
+    /* border-bottom: 1px solid #ddd; */
+    border-right: 1px solid #ddd;
+    position: relative;
+}
+.watch-left .bottom dt {
+    position: relative;
+    font-weight: normal;
+    color: #997239;
+    font-size: 12px;
+}
+.watch-left .bottom dd {
+    color: #999;
+    display: inline;
+    margin-right: 10px;
+    font-size: 14px;
+}
+.watch-left .sub {
+    border: 1px solid #ddd;
+    border-left: 0;
+    width: 266px;
+    min-height: 110px;
+    display: none;
+    position: absolute;
+    top: -1px;
+    left: 199px;
+    background-color: #fff;
+    padding: 20px;
+    z-index: 1;
+}
+.watch-left .bottom:hover .sub {
+    display: block;
+}
+.watch-left .sub a{
+    margin: 0 10px 8px 0;
+    color: #999;
+    font-size: 14px;
+    display: inline-block;
+    word-wrap: break-word;
+}
+.bottom-r-icon {
+    float: right;
+    width: 20px;
+    height: 20px;
+    background-image: url("img/a.png");
+    background-position: 20px -514px;
+    background-color: #fff;
+}
+.watch-left .bottom .ad {
+    font-size: 14px;
+    color: #999;
+}
+.watch-left .bottom dd:hover {
+    color: #b01330;
+}
+.watch-left .sub a:hover {
+    color: #b01330;
 }
