--- a/css/index.css
+++ b/css/index.css
@@ -871,7 +871,12 @@ a:hover {
     width: 100%;
     height: 460px;
 }
-
+.swiper-container a {
+    height: 460px;
+    display: block;
+    overflow: hidden;
+    position: relative;
+}
 .swiper-slide a img {
     position: absolute;
     left: 48%;
