--- a/style/w_wanbao.css
+++ b/style/w_wanbao.css
@@ -260,7 +260,6 @@ table { border-collapse:collapse; border-spacing:0; }
     color: #999;
     overflow: hidden;
     -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;
     word-break: break-all;
     display: -webkit-box;
 }
@@ -1222,7 +1221,6 @@ a:hover {
     color: #666;
     overflow: hidden;
     -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;
     word-break: break-all;
     display: -webkit-box;
 }
@@ -1460,6 +1458,9 @@ a:hover {
     float: left;
     width: 190px;
     height: 100px;
+    background: -webkit-linear-gradient(225deg,#f9f9f9 0,#ececec 79%,#d8d8d8 100%);
+    background: -moz-linear-gradient(225deg,#f9f9f9 0,#ececec 79%,#d8d8d8 100%);
+    background: -o-linear-gradient(225deg,#f9f9f9 0,#ececec 79%,#d8d8d8 100%);
     background: linear-gradient(225deg,#f9f9f9 0,#ececec 79%,#d8d8d8 100%);
     border-radius: 8px;
     position: relative;
@@ -1542,18 +1543,23 @@ a:hover {
 }
 .w_slideshow img {
     width: 1980px;
-    animation: move 5s linear 1s infinite;
+    -webkit-animation: move 5s linear 0.1s infinite;
+       -moz-animation: move 5s linear 0.1s infinite;
+         -o-animation: move 5s linear 0.1s infinite;
+            animation: move 5s linear 0.1s infinite;
     height: 465px;
     display: block;
 } 
 @keyframes move {
     from {
-        transform: scale(1.1);
+        -webkit-transform: scale(1.1);
+                transform: scale(1.1);
     }
-    to {
-        transform: scale(1);
+    to  {
+        -webkit-transform: scale(1);
+                transform: scale(1);
     }
-}
+} 
 .w_slideshow-a {
     position: absolute;
     left: 50%;
@@ -1584,6 +1590,7 @@ a:hover {
     margin: 0 auto;
     overflow: hidden;
     position: relative;
+    height: 132px;
 }
 .w_brand-lt1 {
     padding: 0 10px;
@@ -1593,8 +1600,9 @@ a:hover {
     margin-top: 33px;
     background-image: url('../images/spriteB.png');
     background-position: -469px -210px;
-    background-size: 589px;
-    width: 20px;
+    -o-background-size: 589px;
+       background-size: 589px;
+    width: 19px;
     height: 65px;
     float: left;
 }
@@ -1602,15 +1610,25 @@ a:hover {
     display: block;
     background-image: url('../images/spriteB.png');
     background-position: -469px -210px;
-    background-size: 589px;
-    width: 20px;
+    -o-background-size: 589px;
+       background-size: 589px;
+    width: 19px;
     height: 65px;
     padding: 0 10px;
     cursor: pointer;
-    display: block;
     margin-top: 33px;
-    transform: rotate(180deg);
-    float: left;
+    -webkit-transform: rotate(180deg);
+       -moz-transform: rotate(180deg);
+        -ms-transform: rotate(180deg);
+         -o-transform: rotate(180deg);
+            transform: rotate(180deg);
+    float: right;
+}
+.w_brand-left1 {
+    position: relative;
+    width: 1043px;
+    height: 132px;
+    overflow: hidden;
 }
 .w_brand-lt2 {
    float: left;
@@ -1623,7 +1641,7 @@ a:hover {
     background-color: #fff;
     display: block;
     margin-right: 17px;
-    width: 148.857px;
+    width:132px;
     height: 132px;
 }
 .w_brand-lt3 img{
@@ -1632,6 +1650,7 @@ a:hover {
     height: 70px;
     max-width: 132px;
     margin: 30px auto;
+    display: block;
 }
 .w_brand_hover {
     display: none;
