--- a/shop_car.css
+++ b/shop_car.css
@@ -360,12 +360,17 @@ table { border-collapse:collapse; border-spacing:0; }
     width: 50px;
     height: 18px;
     line-height: 18px;
-    text-align: center;
     margin-right: 35px;
     margin-top: 12px;
     border: 1px solid #cc5252;
     border-radius: 100px;
+}
+.shopName a span {
+    display: inline-block;
+    text-align: center;
     color: #cc5252;
+    width: 50px;
+    height: 18px;
 }
 .ticket {
     position: absolute;
@@ -377,10 +382,11 @@ table { border-collapse:collapse; border-spacing:0; }
     box-shadow: 0 0 4px 1px #ddd;
     z-index: 2;
 }
-.ticket em {
+.ticket>em {
     float: left;
     width: 68px;
     height: 38px;
+    line-height: 38px;
     margin-right: 15px;
     color: #fff;
     font-size: 18px;
@@ -426,4 +432,22 @@ table { border-collapse:collapse; border-spacing:0; }
     font-style: normal;
     box-sizing: border-box;
     cursor: pointer;
+}
+.shopName>em {
+    position: absolute;
+    right: 50px;
+    top: 31px;
+    display: inline-block;
+    background-image: url('Limages/icon.png');
+    background-position: -206px -325px;
+    background-size: 589px;
+    width: 16px;
+    height: 14px;
+    z-index: 3;
+}
+.ticketOn {
+    background-position: -90px -239px !important;
+}
+.ticket>i:hover {
+    border: 1px solid #999;
 }
