--- a/css/index.css
+++ b/css/index.css
@@ -868,12 +868,13 @@ a:hover {
     background-color: #f5f5f5;
 }
 
-.swiper-container {
+.swiper-container1 {
+    position: relative;
     width: 100%;
     height: 460px;
 }
 
-.swiper-container a {
+.swiper-container1 a {
     height: 460px;
     display: block;
     overflow: hidden;
@@ -890,36 +891,49 @@ a:hover {
     transform: translateX(-50%);
 }
 
-.swiper-button-prev,
-.swiper-button-next {
+.swiper-button-prev1,
+.swiper-button-next1 {
+    position: absolute;
     width: 36px;
     height: 60px;
+    top: 230px;
+    margin-top: -30px;
+    z-index: 9;
+    cursor: pointer;
 }
 
-.swiper-button-prev {
+.swiper-button-prev1 {
     left: 390px;
     background: url(../images/spriteA.png) -141px -183px;
 }
 
-.swiper-button-prev:hover {
+.swiper-button-prev1:hover {
     background: url(../images/spriteA.png) -261px -183px;
 }
 
-.swiper-button-next {
+.swiper-button-next1 {
     right: 200px;
     background: url(../images/spriteA.png) -300px -183px;
 }
 
-.swiper-button-next:hover {
+.swiper-button-next1:hover {
     background: url(../images/spriteA.png) -187px -113px;
 }
-
-.swiper-pagination-fraction,
-.swiper-pagination-custom,
-.swiper-container-horizontal>.swiper-pagination-bullets {
+.swiper-container1 .swiper-pagination1 {
+    position: absolute;
+    width: auto;
+    height: 14px;
+    bottom: 22px;
+    z-index: 9;
+    left: 50%;
+    margin-left: -300px;
+}
+.swiper-pagination-bullets {
+    position: absolute;
     bottom: 10px;
-    left: -180px;
+    left: -495px;
     width: 100%;
+    z-index: 9;
 }
 
 .swiper-pagination-bullet {
@@ -1017,11 +1031,12 @@ a:hover {
     width: 600px;
     height: 280px;
     margin: 0 10px 0 30px;
-    background-color: red;
+    background-color: #fff;
     overflow: hidden;
 }
 .index_buy_list_swiper-container,
 .index_buy_list_slider_right_swiper-containe {
+    position: relative;
     width: 100%;
     height: 100%;
 }
@@ -1034,13 +1049,84 @@ a:hover {
     float: right;
     width: 190px;
     height: 280px;
-    background-color: red;
+    background-color: #fff;
     overflow: hidden;
 }
 .index_buy_list_slider_right_swiper-container {
+    position: relative;
+    height: 280px;
     text-align: center;
     font-size: 18px;
-    background: #fff;
+    background-color: #fff;
+}
+.index_buy_right_swiper-button-next,
+.index_buy_right_swiper-button-prev {
+    width: 20px;
+    height: 20px;
+    position: absolute;
+    top: 140px;
+    margin-top: -10px;
+    cursor: pointer;
+    z-index: 9;
+}
+
+.index_buy_right_swiper-button-prev {
+    left: 0;
+    background: url(../images/spriteA.png) -137px -374px no-repeat;
+}
+.index_buy_right_swiper-button-next {
+    right: 0;
+    background: url(../images/spriteA.png) -95px -374px no-repeat;
+}
+.index_buy_right_swiper-button-prev:hover {
+    background: url(../images/spriteA.png) -418px -296px no-repeat;
+}
+.index_buy_right_swiper-button-next:hover {
+    background: url(../images/spriteA.png) -116px -374px no-repeat;
+}
+.index_buy_list_slider_right_swiper-container .index_buy_right_swiper-pagination {
+    position: absolute;
+    left: 40px;
+    bottom: 5px;
+    width: auto;
+}
+.index_buy_right_swiper-pagination .swiper-pagination-bullet {
+    width: 11px;
+    height: 11px;
+    border: 2px solid #fff;
+    box-sizing: border-box;
+    background-color: #ccc;
+    margin: 0 3px;
+    opacity: .5;
+}
+.index_buy_right_swiper-pagination  .swiper-pagination-bullet-active {
+    background-color: #cc5252;
+    border-color: #e6e6e6;
+    opacity: 1;
+}
+.index_buy_list_swiper-button-prev,
+.index_buy_list_swiper-button-next {
+    width: 30px;
+    height: 60px;
+    position: absolute;
+    top: 140px;
+    margin-top: -30px;
+    z-index: 9;
+    cursor: pointer;
+}
+.index_buy_list_swiper-button-prev {
+    left: 0;
+    background: url(../images/spriteA.png) -142px -184px no-repeat;
+}
+.index_buy_list_swiper-button-prev:hover {
+    background: url(../images/spriteA.png) -222px -184px no-repeat;
+}
+.index_buy_list_swiper-button-next {
+    right: 0;
+    background: url(../images/spriteA.png) -302px -184px no-repeat;
+}
+.index_buy_list_swiper-button-next:hover {
+    background: url(../images/spriteA.png) -182px -184px no-repeat;
 }
 .top_foot {
     background-color: #fff;
