--- a/style/w_wanbao.css
+++ b/style/w_wanbao.css
@@ -1319,8 +1319,7 @@ a:hover {
     border: 1px solid #f1f1f1;
 }
 .w_number-Bt3 {
-    display: none;
-    display: inline-block;
+    display:none;
     width: 28px;
     height: 28px;
     line-height: 28px;
@@ -1542,15 +1541,15 @@ a:hover {
     top:-500px;
 }
 .w_slideshow img {
-    width: 1980px;
-    -webkit-animation: move 4s linear 0.1s infinite;
-       -moz-animation: move 4s linear 0.1s infinite;
-         -o-animation: move 4s linear 0.1s infinite;
-            animation: move 4s linear 0.1s infinite;
+    width: 1920px;
+    -webkit-animation: move 4s linear 0.01s infinite;
+       -moz-animation: move 4s linear 0.01s infinite;
+         -o-animation: move 4s linear 0.01s infinite;
+            animation: move 4s linear 0.01s infinite;
     height: 465px;
     display: block;
 } 
-@keyframes move {
+@-webkit-keyframes move {
     0% {
         -webkit-transform: scale(1.1,1.1);
                 transform: scale(1.1,1.1);
@@ -1564,9 +1563,68 @@ a:hover {
         transform: scale(1,1);
     }
 } 
+@-moz-keyframes move {
+    0% {
+        -webkit-transform: scale(1.1,1.1);
+                -moz-transform: scale(1.1,1.1);
+             transform: scale(1.1,1.1);
+    }
+    50% {
+        -webkit-transform: scale(1.003,1.003);
+                -moz-transform: scale(1.003,1.003);
+             transform: scale(1.003,1.003);
+    }
+    100%{
+        -webkit-transform: scale(1,1);
+        -moz-transform: scale(1,1);
+             transform: scale(1,1);
+    }
+} 
+@-o-keyframes move {
+    0% {
+        -webkit-transform: scale(1.1,1.1);
+                -o-transform: scale(1.1,1.1);
+           transform: scale(1.1,1.1);
+    }
+    50% {
+        -webkit-transform: scale(1.003,1.003);
+                -o-transform: scale(1.003,1.003);
+           transform: scale(1.003,1.003);
+    }
+    100%{
+        -webkit-transform: scale(1,1);
+        -o-transform: scale(1,1);
+           transform: scale(1,1);
+    }
+} 
+@keyframes move {
+    0% {
+        -webkit-transform: scale(1.1,1.1);
+                -moz-transform: scale(1.1,1.1);
+                  -o-transform: scale(1.1,1.1);
+             transform: scale(1.1,1.1);
+    }
+    50% {
+        -webkit-transform: scale(1.003,1.003);
+                -moz-transform: scale(1.003,1.003);
+                  -o-transform: scale(1.003,1.003);
+             transform: scale(1.003,1.003);
+    }
+    100%{
+        -webkit-transform: scale(1,1);
+        -moz-transform: scale(1,1);
+          -o-transform: scale(1,1);
+             transform: scale(1,1);
+    }
+} 
+.w_slideshow img:hover {
+    animation: move 4s linear 1s 1;
+    animation-play-state:paused ;
+    cursor: pointer;
+}
 .w_slideshow-a {
     position: absolute;
-    left: 50%;
+    left: 47%;
     bottom: 13px
 }
 .w_slideshow-a1{
@@ -1729,7 +1787,8 @@ a:hover {
     line-height: 12px;
     margin-top: 10px;
     overflow: hidden;
-    text-overflow: ellipsis;
+    -o-text-overflow: ellipsis;
+       text-overflow: ellipsis;
     white-space: nowrap;
 }
 .w_blank3-foot {
@@ -1745,7 +1804,8 @@ a:hover {
     display: block;
     background-image: url('../images/spriteB.png');
     background-position: -244px -60px;
-    background-size: 589px;
+    -o-background-size: 589px;
+       background-size: 589px;
     width: 31px;
     height: 11px;
     margin: auto;
@@ -1799,7 +1859,6 @@ a:hover {
     overflow: hidden;
     display: -webkit-box;
     -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;
     word-break: break-all;
     cursor: pointer;
 }
@@ -1819,7 +1878,8 @@ a:hover {
     line-height: 20px;
     margin-right: 10px;
     overflow: hidden;
-    text-overflow: ellipsis;
+    -o-text-overflow: ellipsis;
+       text-overflow: ellipsis;
     white-space: nowrap
 }
 .w_shop-list8 {
