--- a/css/index.css
+++ b/css/index.css
@@ -862,6 +862,7 @@ a:hover {
     background-color: #ccaa7a;
     color: #fff;
 }
+
 /* 主体部分CSS开始 */
 .main {
     position: relative;
@@ -919,15 +920,17 @@ a:hover {
 .swiper-button-next1:hover {
     background: url(../images/spriteA.png) -187px -113px;
 }
+
 .swiper-container1 .swiper-pagination1 {
     position: absolute;
     width: auto;
     height: 14px;
     bottom: 22px;
-    z-index: 9;
+    z-index: 1;
     left: 50%;
     margin-left: -300px;
 }
+
 .swiper-pagination-bullets {
     position: absolute;
     bottom: 10px;
@@ -958,23 +961,23 @@ a:hover {
 .index_time_to_buy_left_box {
     position: relative;
     float: left;
-    width: 350px;
-    height: 280px;
     overflow: hidden;
 }
 
 .index_time_to_buy_left {
     position: relative;
-    width: 350px;
-    height: 280px;
-    background-color: red;
+    overflow: hidden;
 }
+
 .index_time_to_buy_left img {
     -webkit-transition: all 0.5s;
     -o-transition: all 0.5s;
     -moz-transition: all 0.5s;
     transition: all 0.5s;
+    min-width: 360px;
+    min-height: 280px;
 }
+
 .index_time_to_buy_left:hover img {
     -webkit-transform: scale(1.1);
     -moz-transform: scale(1.1);
@@ -994,16 +997,11 @@ a:hover {
     position: absolute;
     left: 0;
     bottom: 30px;
-    width: 350px;
+    width: 100%;
     height: 50px;
     color: #fff;
     text-align: center;
     z-index: 9;
-}
-
-.index_time_to_buy_left img {
-    width: 350px;
-    height: 280px;
 }
 
 .index_time_to_buy_left_txt1 {
@@ -1016,9 +1014,10 @@ a:hover {
 }
 
 .index_time_to_buy_left_shadow {
-    width: 350px;
+    width: 100%;
     height: 110px;
     position: absolute;
+    left: 0;
     bottom: 0;
     opacity: .6;
     z-index: 8;
@@ -1029,10 +1028,10 @@ a:hover {
 }
 
 .index_buy_list_slider {
+    margin-left: 10px;
     float: left;
     width: 600px;
     height: 280px;
-    margin: 0 10px 0 30px;
     background-color: #fff;
     overflow: hidden;
 }
@@ -1044,17 +1043,19 @@ a:hover {
     height: 100%;
 }
 
-.index_buy_list_swiper-container .swiper-slide > a {
+.index_buy_list_swiper-container .swiper-slide>a {
     float: left;
     width: 200px;
     height: 280px;
 }
-.index_buy_list_swiper-container .swiper-slide > a img {
+
+.index_buy_list_swiper-container .swiper-slide>a img {
     position: relative;
     width: 166px;
     height: 166px;
 }
-.index_buy_list_swiper-container .swiper-slide > a  > p {
+
+.index_buy_list_swiper-container .swiper-slide>a>p {
     text-align: center;
     color: #666;
     margin: 10px 0;
@@ -1062,6 +1063,7 @@ a:hover {
     font-size: 12px;
     font-family: DIN-Bold;
 }
+
 .index_buy_list_price {
     width: 110px;
     height: 20px;
@@ -1070,25 +1072,30 @@ a:hover {
     color: #fff;
     text-align: center;
 }
-.index_buy_list_swiper-container .swiper-slide > a  i {
+
+.index_buy_list_swiper-container .swiper-slide>a i {
     float: left;
     line-height: 20px;
     padding: 0 6px;
+    -moz-box-sizing: border-box;
     box-sizing: border-box;
     font-weight: 800;
     font-style: normal;
     font-family: DIN-Bold;
 }
-.index_buy_list_swiper-container .swiper-slide > a i:first-child {
+
+.index_buy_list_swiper-container .swiper-slide>a i:first-child {
     min-width: 35px;
     background: url(../images/spriteA.png) -42px -374px;
 }
-.index_buy_list_swiper-container .swiper-slide > a i:last-child {
+
+.index_buy_list_swiper-container .swiper-slide>a i:last-child {
     min-width: 45px;
     background-color: #f2f2f2;
     color: #cc5252;
     border-radius: 0 10px 10px 0;
 }
+
 del {
     display: block;
     margin-top: 3px;
@@ -1099,6 +1106,7 @@ del {
     font-family: DIN-Bold;
     font-weight: 800;
 }
+
 .index_but_list_slider_right {
     float: right;
     width: 190px;
@@ -1132,36 +1140,44 @@ del {
     left: -20px;
     background: url(../images/spriteA.png) -137px -374px no-repeat;
 }
+
 .index_buy_right_swiper-button-next {
     right: -20px;
     background: url(../images/spriteA.png) -87px -374px no-repeat;
 }
+
 .index_buy_right_swiper-button-prev:hover {
     background: url(../images/spriteA.png) -418px -296px no-repeat;
 }
+
 .index_buy_right_swiper-button-next:hover {
     background: url(../images/spriteA.png) -109px -374px no-repeat;
 }
+
 .index_buy_list_slider_right_swiper-container .index_buy_right_swiper-pagination {
     position: absolute;
     left: 25px;
     bottom: -35px;
     width: auto;
 }
+
 .index_buy_right_swiper-pagination .swiper-pagination-bullet {
     width: 11px;
     height: 11px;
     border: 2px solid #fff;
+    -moz-box-sizing: border-box;
     box-sizing: border-box;
     background-color: #ccc;
     margin: 0 3px;
     opacity: .5;
 }
-.index_buy_right_swiper-pagination  .swiper-pagination-bullet-active {
+
+.index_buy_right_swiper-pagination .swiper-pagination-bullet-active {
     background-color: #cc5252;
     border-color: #e6e6e6;
     opacity: 1;
 }
+
 .index_buy_list_swiper-button-prev,
 .index_buy_list_swiper-button-next {
     width: 30px;
@@ -1177,13 +1193,16 @@ del {
     left: 0;
     background: url(../images/spriteA.png) -142px -184px no-repeat;
 }
+
 .index_buy_list_swiper-button-prev:hover {
     background: url(../images/spriteA.png) -222px -184px no-repeat;
 }
+
 .index_buy_list_swiper-button-next {
     right: 0;
     background: url(../images/spriteA.png) -302px -184px no-repeat;
 }
+
 .index_buy_list_swiper-button-next:hover {
     background: url(../images/spriteA.png) -182px -184px no-repeat;
 }
@@ -1450,6 +1469,7 @@ li .tit_spc:hover {
     font-weight: 800;
     font-size: 20px;
     color: #cc5252;
+    margin-left: 10px;
 }
 
 .zd_index_count_down_time {
@@ -1492,4 +1512,95 @@ li .tit_spc:hover {
 
 .zd_index_time_shop a:hover {
     text-decoration: underline;
+}
+.zd_index_boom {
+    position: relative;
+    margin-top: 20px;
+}
+.zd_index_boom_tit {
+    height: 60px;
+    margin-left: 10px;
+}
+.zd_index_boom_tit > p {
+    float: left;
+    line-height: 60px;
+    font-weight: 800;
+    font-size: 20px;
+    color: #4a4a4a;
+    margin-right: 20px;
+}
+.zd_index_boom_tit ul {
+    float: left;
+    margin-top: 15px;
+}
+.zd_index_boom_tit  li {
+    position: relative;
+    float: left;
+    min-width: 70px;
+    height: 30px;
+    padding: 0 5px;
+    line-height: 30px;
+    margin-right: 8px;
+    border-radius: 2%;
+    color: #666;
+    font-size: 12px;
+    text-align: center;
+    background-color: #e6e6e6;
+    cursor: pointer;
+}
+.zd_index_boom_tit li:hover {
+    background-color: #333;
+    color: #f2d291;
+}
+.index_shape_of_jiao {
+    position: absolute;
+    bottom: -4px;
+    left: 50%;
+    margin-left: -5px;
+    width: 11px;
+    height: 4px;
+    background: url(../images/spriteA.png) -326px -168px no-repeat;
+}
+.index_boom_list_right {
+    float: right;
+    width: 800px;
+    height: 360px;
+}
+.index_boom_list_right a {
+    float: right;
+}
+.index_boom_list_right a:nth-child(1) {
+    margin-bottom: 10px;
+}
+.index_boom_list_right a:nth-child(2) {
+    margin: 0 15px 10px 0;
+}
+.index_boom_list_right a:nth-child(4) {
+    margin-right: 15px;
+}
+.index_boom_list_right img:hover {
+    box-shadow: 0 2px 10px 0 rgba(0,0,0,.15);
+}
+.index_tab_btns_left,
+.index_tab_btns_right {
+    width: 30px;
+    height: 60px;
+    position: absolute;
+    top: 50%;
+    cursor: pointer;
+    z-index: 1;
+}
+.index_tab_btns_left {
+    left: 0;
+    background: url(../images/spriteA.png) -142px -184px no-repeat;
+}
+.index_tab_btns_left:hover {
+    background: url(../images/spriteA.png) -262px -184px no-repeat;
+}
+.index_tab_btns_right {
+    right: 0;
+    background: url(../images/spriteA.png) -302px -184px no-repeat;
+}
+.index_tab_btns_right:hover {
+    background: url(../images/spriteA.png) -342px -184px no-repeat;
 }
